Update README to document scoreboards, results channel, and spangram tracking
- Add §8 Game Comparison Scoreboards covering posting lifecycle, layout
  rules, winner determination, extensibility, and spangram position
- Update Overview to mention head-to-head scoreboards and results channel
- Add resultsChannelId to Configuration YAML example
- Update Key Components: ResultsChannelService, ScoreboardRenderer,
  GameComparisonScoreboard, ScoreboardService.areBothPlayersFinished
- Update test count to 160 tests; add scoreboard rendering test classes
- Update design trade-offs table with new scoreboard/channel decisions

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>